--- a/exts/Makefile.inc
+++ b/exts/Makefile.inc
@@ -1,10 +1,12 @@
 
 LIBS     := -L$(LIBEXTSDIR)/dbcsr -ldbcsr $(LIBS)
-EXTSDEPS  = $(LIBEXTSDIR)/dbcsr/libdbcsr.a
+EXTSDEPS_LIB  = $(LIBEXTSDIR)/dbcsr/libdbcsr.a
+EXTSDEPS_MOD = $(OBJEXTSDIR)/dbcsr/dbcsr_api.mod $(OBJEXTSDIR)/dbcsr/dbcsr_tensor_api.mod
+$(EXTSDEPS_MOD) : ; # override builtin .mod rule to prevent circular dependency
+
 dbcsr:
 	$(MAKE) -C $(EXTSHOME)/$@ \
 	   INCLUDEMAKE=$(CP2KHOME)/arch/$(ARCH).$(ONEVERSION) \
 	   LIBDIR=$(LIBEXTSDIR)/$@ \
 	   OBJDIR=$(OBJEXTSDIR)/$@ \
 	   FYPPEXE=$(TOOLSRC)/build_utils/fypp
-	@cp $(OBJEXTSDIR)/$@/*.mod $(OBJDIR)/
